<resources>
    <string name="app_name">Appwrite Android Trae</string>
    <string name="appwrite_api_key"></string>
    <string name="feature_subscription">訂閱到期提醒</string>
    <string name="feature_oil">油價監控</string>
    <string name="feature_bank">鋒兄銀行\n(+電子票證)</string>
    <string name="feature_us_debt">US Debt</string>
    <string name="feature_food">食品(或商品)</string>
    <string name="feature_notes">常用筆記</string>
    <string name="feature_common">常用資料</string>
    <string name="feature_lottery_reason">最瞎結婚理由</string>
    <string name="feature_battery_status">電池選單</string>
    <string name="feature_feng_tools">鋒兄工具</string>
    <string name="feature_phone_compare">手機比價</string>
    <string name="feature_feng_tube">鋒兄Tube</string>
    <string name="feature_feng_finance">鋒兄金融</string>
    <string name="home_icon_battery">電</string>
    <string name="home_icon_subscription">訂</string>
    <string name="home_icon_oil">油</string>
    <string name="home_icon_bank">銀</string>
    <string name="home_icon_food">食</string>
    <string name="home_icon_notes">記</string>
    <string name="home_icon_common">常</string>
    <string name="birthday_easter_egg_badge">4/3 限定彩蛋</string>
    <string name="birthday_easter_egg_title_tuge">塗哥生日快樂特效</string>
    <string name="birthday_easter_egg_subtitle_tuge">%1$s 今彩539頭獎得主鋒兄</string>
    <string name="birthday_easter_egg_title_feng">鋒兄生日快樂特效</string>
    <string name="birthday_easter_egg_subtitle_feng">%1$s 高考三級資訊處理榜首鋒兄</string>
    <string name="birthday_easter_egg_footer">今天打開首頁才會出現，隔天自動隱藏。</string>
    <string name="main_section_label">功能選單</string>
    <string name="main_tile_subscription_desc">追蹤每筆訂閱的費用、帳戶與到期時間</string>
    <string name="main_tile_oil_desc">抓取最新官方油價資訊並顯示更新時間</string>
    <string name="main_tile_bank_desc">彙整銀行帳戶、電子票證、存款與常用資料</string>
    <string name="main_tile_us_debt_desc">查看最新美國國債資料與更新時間</string>
    <string name="main_tile_food_desc">管理食品(或商品)紀錄、價格與保存期限</string>
    <string name="main_tile_notes_desc">整理文章、連結與常用筆記</string>
    <string name="main_tile_common_desc">查看常用帳號與共用資訊</string>
    <string name="main_tile_lottery_reason_desc">官方台彩逐期號碼與指定組合比對</string>
    <string name="main_tile_battery_desc">上次充滿電時間與剩餘電量估算</string>
    <string name="main_tile_feng_tools_desc">鋒兄比價與手機比價小工具集中入口</string>
    <string name="feng_tools_eyebrow">FENGBRO TOOLS</string>
    <string name="feng_tools_intro">把常用價格工具集中在這裡，快速切換商品比價與手機通路比價。</string>
    <string name="feng_tools_price_desc">貼上 PChome / momo 商品連結，整理價格走勢與近期連結。</string>
    <string name="feng_tools_phone_desc">查詢地標網通與傑昇通信公開頁面，快速比較手機價格。</string>
    <string name="feng_tools_tube_desc">追蹤指定 YouTube 頻道最新影片，各頻道最多顯示 10 部。</string>
    <string name="feng_tools_finance_desc">追蹤台股、全球指數、能源、黃金、美債、波動率與加密貨幣，命中 52 週高低會提示。</string>
    <string name="home_icon_feng_tube">YT</string>
    <string name="home_icon_feng_finance">金</string>
    <string name="feng_tube_home_alert_title">鋒兄Tube 有新影片</string>
    <string name="feng_tube_home_alert_desc">近 3 天有 %1$d 部新影片，點一下查看最新清單。</string>
    <string name="feng_tube_intro">集中追蹤鋒兄指定頻道最新影片，各頻道最多 10 部，3 天內新片會標示 NEW。</string>
    <string name="feng_tube_refresh">重新整理</string>
    <string name="feng_tube_status_loading">正在抓取 YouTube 最新影片...</string>
    <string name="feng_tube_status_done">已更新，共 %1$d 部影片，近 3 天 %2$d 部。</string>
    <string name="feng_tube_status_empty">目前沒有取得影片資料。</string>
    <string name="feng_tube_status_error">鋒兄Tube 載入失敗: %1$s</string>
    <string name="feng_tube_new_badge">NEW</string>
    <string name="feng_tube_update_badge">更新</string>
    <string name="feng_finance_intro">參考 Yahoo 股市與 CNBC Quote 頁面，集中查看加權指數、台積電、Nikkei、KOSPI、Brent、30 年美債、黃金、美股指數、VIX、BTC 與 ETH。</string>
    <string name="feng_finance_refresh">重新整理</string>
    <string name="feng_finance_status_loading">正在載入 CNBC 金融資料...</string>
    <string name="feng_finance_status_progress">正在載入 %1$d/%2$d: %3$s</string>
    <string name="feng_finance_status_done">已更新 %1$d 項金融資料。</string>
    <string name="feng_finance_empty">尚未取得金融資料。</string>
    <string name="feng_finance_new_high">創新高</string>
    <string name="feng_finance_new_low">創新低</string>
    <string name="feng_finance_error_timeout">CNBC 載入逾時</string>
    <string name="feng_finance_error_parse">CNBC 資料解析失敗</string>
    <string name="shiller_pe_home_alert_title">Shiller PE Ratio 創新高</string>
    <string name="shiller_pe_home_alert_desc">目前 %1$.2f，已達歷史高點 %2$.2f (%3$s)。點一下查看鋒兄金融。</string>
    <string name="phone_compare_intro">輸入 iPhone、Samsung、容量或型號關鍵字，抓取地標網通與傑昇通信資料並依最低價排序。</string>
    <string name="phone_compare_query_label">關鍵字</string>
    <string name="phone_compare_query_hint">Samsung 26、iPhone 17、A17</string>
    <string name="phone_compare_search">開始比價</string>
    <string name="phone_compare_refresh">重新整理</string>
    <string name="phone_compare_status_ready">待命中</string>
    <string name="phone_compare_status_loading">搜尋中...</string>
    <string name="phone_compare_status_done">完成，共 %1$d 筆</string>
    <string name="phone_compare_status_error">手機比價失敗: %1$s</string>
    <string name="phone_compare_results_label">比價結果</string>
    <string name="phone_compare_empty">尚無資料，請輸入關鍵字後開始比價。</string>
    <string name="sleep_hint_label">睡眠警告</string>
    <string name="sleep_hint_placeholder">請入睡</string>
    <string name="code_line_count_placeholder">程式碼行數</string>
    <string name="code_line_count_label">程式碼行數: %1$d</string>
    <string name="voice_input">語音輸入</string>
    <string name="voice_home">首頁語音</string>
    <string name="voice_confirm_title">確認語音內容</string>
    <string name="voice_confirm_apply">套用</string>
    <string name="voice_confirm_retry">重講</string>
    <string name="voice_no_result">沒有辨識到語音內容</string>
    <string name="voice_not_available">這台裝置沒有可用的語音辨識服務</string>
    <string name="voice_prompt_home">請說出要前往的功能，例如訂閱、食品、筆記、常用、銀行、工具、手機比價。</string>
    <string name="voice_prompt_subscription">請說出訂閱搜尋關鍵字，或說新增一筆資料，叫做某某，日期為 2026 年 5 月 18 號上午</string>
    <string name="voice_prompt_food">請說出食品或商品搜尋關鍵字</string>
    <string name="voice_prompt_notes">請說出筆記搜尋關鍵字</string>
    <string name="voice_prompt_common">請說出常用資料搜尋關鍵字</string>
    <string name="voice_prompt_bank">請說出銀行或電子票證搜尋關鍵字</string>
    <string name="voice_prompt_price_compare">請說出商品連結或商品名稱</string>
    <string name="voice_prompt_phone_compare">請說出手機品牌、型號或容量</string>
    <string name="voice_unsupported_module">Android 版目前尚未提供「%1$s」模組</string>
    <string name="voice_unknown_home_command">聽到了「%1$s」，但找不到對應功能</string>
    <string name="menu_bank_stats">鋒兄銀行\n(+電子票證)</string>
    <string name="notification_channel_name">訂閱通知</string>
    <string name="notification_channel_description">用來提醒訂閱即將到期的通知頻道</string>
    <string name="ui_error_prefix">錯誤: </string>
    <string name="ui_close">關閉</string>
    <string name="ui_today_due">今天到期</string>
    <string name="ui_due_tomorrow">明天到期</string>
    <string name="ui_due_in_two_days">兩天後到期</string>
    <string name="ui_due_in_days">%1$d 天後到期</string>
    <string name="screen_subscription_eyebrow">Subscription</string>
    <string name="screen_subscription_subtitle">集中查看訂閱服務、到期時間與費用。</string>
    <string name="subscription_search_hint">搜尋名稱或帳戶</string>
    <string name="subscription_recent_searches_label">最近搜尋紀錄</string>
    <string name="screen_bank_eyebrow">Banking</string>
    <string name="screen_bank_subtitle">台灣的銀行才是銀行，銀行以外先歸類為電子票證。</string>
    <string name="bank_category_note">電子票證</string>
    <string name="screen_food_eyebrow">Food</string>
    <string name="screen_food_subtitle">管理食品(或商品)品項、價格與日期資訊。</string>
    <string name="food_search_hint">搜尋食品、商品名稱或店家</string>
    <string name="screen_notes_eyebrow">Notes</string>
    <string name="screen_notes_subtitle">整理文章標題與相關連結。</string>
    <string name="notes_search_hint">搜尋標題或內容</string>
    <string name="screen_common_eyebrow">Common</string>
    <string name="screen_common_subtitle">列出常用帳號與備註。</string>
    <string name="common_search_hint">搜尋名稱、備註或分類</string>
    <string name="screen_battery_eyebrow">Battery</string>
    <string name="screen_battery_subtitle">整理最近一次充滿電與目前電量狀態。</string>
    <string name="bank_search_hint">搜尋銀行、電子票證、帳號、卡片或地址</string>
    <string name="subscription_alert_title">訂閱到期提醒</string>
    <string name="subscription_voice_add_confirm_title">新增訂閱資料</string>
    <string name="subscription_voice_add_confirm_message">名稱: %1$s\n日期: %2$s</string>
    <string name="subscription_alert_item">%1$s - %2$s (%3$s %4$s)
  %5$s</string>
    <string name="subscription_due_suffix">到期</string>
    <string name="subscription_price_label">價格</string>
    <string name="subscription_account_label">帳戶</string>
    <string name="subscription_next_date_label">下次日期</string>
    <string name="subscription_created_date_label">建立日期</string>
    <string name="subscription_updated_date_label">更新日期</string>
    <string name="subscription_notification_content">%1$s 將於 %2$s %3$s</string>
    <string name="subscription_days_until">距離今天 %1$d 天</string>
    <string name="subscription_days_overdue">已過 %1$d 天</string>
    <string name="screen_title_subscription">訂閱到期提醒</string>
    <string name="screen_title_bank">鋒兄銀行\n(+電子票證)</string>
    <string name="screen_title_food">食品(或商品)</string>
    <string name="screen_title_notes">常用筆記</string>
    <string name="screen_title_common">常用資料</string>
    <string name="screen_title_oil">油價監控</string>
    <string name="screen_title_us_debt">US Debt</string>
    <string name="screen_title_battery">電池選單</string>
    <string name="bank_unknown_name">未命名銀行(或電子票證)</string>
    <string name="bank_account_label">帳號</string>
    <string name="bank_deposit_label">存款</string>
    <string name="bank_withdraw_label">提款</string>
    <string name="bank_transfer_label">轉帳</string>
    <string name="bank_card_label">卡片</string>
    <string name="bank_address_label">地址</string>
    <string name="bank_total_deposit_label">總存款</string>
    <string name="bank_account_total_placeholder">銀行帳戶總數: 0</string>
    <string name="bank_ticket_total_placeholder">電子票證總數: 0</string>
    <string name="bank_account_total_format">銀行帳戶總數: %1$d</string>
    <string name="bank_ticket_total_format">電子票證總數: %1$d</string>
    <string name="bank_category_bank">銀行帳戶</string>
    <string name="bank_category_ticket">電子票證</string>
    <string name="food_unknown_name">未命名食品(或商品)</string>
    <string name="food_amount_label">數量</string>
    <string name="food_price_label">價格</string>
    <string name="food_shop_label">店家</string>
    <string name="food_date_label">日期</string>
    <string name="food_created_date_label">建立日期</string>
    <string name="food_updated_date_label">更新日期</string>
    <string name="food_expiry_label">到期日</string>
    <string name="food_days_until">距離今天 %1$d 天</string>
    <string name="food_days_overdue">已過 %1$d 天</string>
    <string name="article_untitled">未命名文章</string>
    <string name="article_links_count">%1$d 個連結</string>
    <string name="common_uncategorized">未分類</string>
    <string name="common_items_count">%1$d 筆</string>
    <string name="generic_load_error">載入失敗: %1$s</string>
    <string name="error_unauthorized">401 未授權，請設定 API Key 或開放 collections.read 權限。</string>
    <string name="date_label_format">%1$s: %2$s</string>
    <string name="value_label_format">%1$s: %2$s</string>
    <string name="currency_value_format">%1$s: $%2$s</string>
    <string name="subscription_title_format">%1$s - %2$s</string>
    <string name="oil_fetch_error">油價抓取失敗: %1$s</string>
    <string name="oil_latest_price">最新油價: %.2f</string>
    <string name="oil_latest_price_empty">最新油價: --</string>
    <string name="oil_quote_date">報價日期: %1$s</string>
    <string name="oil_quote_date_empty">報價日期: --</string>
    <string name="battery_label_last_full_time">上次充滿電時間</string>
    <string name="battery_label_last_full_delta">上次充滿電距離當下時間差</string>
    <string name="battery_label_current_level">現在電量</string>
    <string name="battery_label_estimated_time">預估電量時間</string>
    <string name="battery_label_estimated_delta">預估電量時間距離當下時間差</string>
</resources>