<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_voice_home"
        android:icon="@android:drawable/ic_btn_speak_now"
        android:title="@string/voice_home"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_bank_stats"
        android:title="@string/menu_bank_stats"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_lottery_reason"
        android:title="@string/feature_lottery_reason"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_battery_status"
        android:title="@string/feature_battery_status"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_feng_tools"
        android:title="@string/feature_feng_tools"
        app:showAsAction="never" />
</menu>
